syntax = "proto3";

option go_package = "github.com/bootjp/elastickv/proto";

service Distribution {
  rpc GetRoute (GetRouteRequest) returns (GetRouteResponse) {}
  rpc GetTimestamp (GetTimestampRequest) returns (GetTimestampResponse) {}
}

message GetRouteRequest {
  bytes key = 1;
}

message GetRouteResponse {
  // start is inclusive. The range extends up to (but excluding) the next
  // route's start. If there is no subsequent start, the range is unbounded.
  bytes start = 1;
  uint64 raft_group_id = 2;
}

message GetTimestampRequest {}

message GetTimestampResponse {
  uint64 timestamp = 1;
}

