syntax = "proto3";

option go_package = "github.com/bootjp/elastickv/proto";


// internal.proto is node to node communication message in raft replication.

message Mutation {
  enum Operation {
    UNKNOWN = 0;
    PUT = 1;
    GET = 2;
    DELETE = 3;
  }

  Operation op = 1;
  bytes key = 2;
  bytes value = 3;
}

message Request {

  oneof request {
    PutRequest put = 1;
    DeleteRequest delete = 2;

    PreCommitRequest pre_commit = 10;
    CommitRequest commit = 11;
  }

  message PreCommitRequest {
    repeated Mutation mutations = 1;
    uint64 start_ts = 2;
  }
  message CommitRequest {
    repeated bytes key= 1;
    uint64 start_ts = 2;
  }
  message PutRequest {
    bytes key = 1;
    bytes value = 2;
  }
  message DeleteRequest {
    bytes key = 1;
  }
}





